--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.0
+  go_router: ^14.8.1
 
 dev_dependencies:
   flutter_lints: ^5.0.0
